# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\ApiAuthController;
 use App\Http\Controllers\Api\ApiPlantController;
 use App\Http\Controllers\Api\ApiAddressController;
+use App\Http\Controllers\Api\ApiMissionsController;
 
 /*
 |--------------------------------------------------------------------------
@@ -33,5 +34,6 @@ Route::prefix('v1')->group(function () {
 Route::prefix('v1')->group(function () {
     Route::apiResource('plants', ApiPlantController::class);
     Route::apiResource('address', ApiAddressController::class);
+    Route::apiResource('missions', ApiMissionsController::class);
 
 });
